objects/Brand_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archival_Date__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Archival Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Classification__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Brand Classification</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Code</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brand Hierarchies</relationshipLabel>
        <relationshipName>Brand_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_MM_Code__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Brand MM Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Sas_Code__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Brand Sas Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Status__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Brand Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeCategory__c</fullName>
        <description>it is only for Brand_Hierarchy_Outbound feed.</description>
        <formula>&apos;CRCBRANDHIERARCHY&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CodeCategory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeType__c</fullName>
        <description>it is only for Brand_Hierarchy_Outbound feed.</description>
        <formula>&apos;BRANDHIERARCHY&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>it is only for Brand_Hierarchy_Outbound feed.</description>
        <formula>Brand_Code__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut__c</fullName>
        <label>Cut</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <picklist>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500mA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500mA - EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500mA - NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500mA - UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filtered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flavormax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSAW-001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED Green - UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED Red - UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifilter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Filtered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US to EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vapors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flavor__c</fullName>
        <label>Flavor</label>
        <picklist>
            <picklistValues>
                <fullName>Absolute Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blend No. 27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Mint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bold Classic 4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bold Menthol 4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bold Original 4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bold Wintergreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic 2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic 2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cool Mint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cool Mint Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisp Blend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisp Mint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Blend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion 2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Mint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvest Blend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menthol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menthol 2.4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <picklist>
            <picklistValues>
                <fullName>100s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>72mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>83mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>King Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plug Adapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stainless Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XL LONG</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Group__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>License Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Type__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Pack Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging__c</fullName>
        <label>Packaging</label>
        <picklist>
            <picklistValues>
                <fullName>10-2-Pack Upright Promo 201002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Ct  Tray-5-Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10ct Tray-5-Packpromo201001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Ct Tray-5-Packpromo201001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 -Count Upright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 -Ct  Upright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25s Hard Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Pack Promo 201002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 -Count Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Pack Promo 201001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannister 6 Oz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case-2 Pack Promo 201002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case-5 Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case-5 Pack Promo 201001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case-Singles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Pack 25s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Pack Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Pack Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Pack Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Pack Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Pack Purse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pouch 0.75 Oz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princess Pack</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaperType__c</fullName>
        <label>PaperType</label>
        <picklist>
            <picklistValues>
                <fullName>Banded Paper Ny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Banded Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banded Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - Black  Nashville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - Absolute Tobacco  Cooperstown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - Menthol Ice  New Orleans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - Red Label  El Paso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - Tobacco Gold  Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer Battery Long Green LED - I Love Green Smoke  Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer Battery Long Green LED - Mocha Mist  Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer Battery Long Green LED - Smooth Chocolate  Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer Battery Long Green LED - Vanilla Dreams  Charleston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Designer Battery Long Green  LED ABS Tobacco  Cooperstown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Designer Battery Long Green  LED Mocha Mist  Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Designer Battery Long Green LED I Love Green Smoke  Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Designer Battery Long Green LED Menthol Ice  New Orleans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Designer Battery Long Green LED Red Label  El Paso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Designer Battery Long Green LED Smooth Chocolate  Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Designer Battery Long Green LED Tobacco Gold  Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Designer Battery Long Green LED Vanilla Dreams  Charleston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer  - Smooth Chocolate  Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - I Love Green Smoke  Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - Mocha Mist  Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - Vanilla Dreams  Charleston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pick_Up_Policy_Weeks__c</fullName>
        <label>Pick Up Policy Weeks</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pm_Brand_Code__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Pm Brand Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Category__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Price Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductLine_Code__c</fullName>
        <description>it is only for Brand_Hierarchy_Outbound feed.</description>
        <formula>Product_Line_Code__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Desc__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Product Desc</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line Code</label>
        <referenceTo>Product_Line__c</referenceTo>
        <relationshipLabel>Brand Hierarchies</relationshipLabel>
        <relationshipName>Brand_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Product Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Brand_Family__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Reporting Brand Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Cut__c</fullName>
        <description>It is only for Brand_Hierarchy_Outbound feed.</description>
        <label>Short Cut</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String_Data__c</fullName>
        <label>String Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Taste__c</fullName>
        <label>Taste</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500mA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Special Blend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blend No. 27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blend No. 32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blend No. 54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze Pack Blend No. 27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chewable Dissolvables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constant Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluxe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-COMMERCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Flavor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Pack 25s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <description>it is only for Brand_Hierarchy_Outbound feed.</description>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_Per_Pack__c</fullName>
        <label>Units Per Pack</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ust_Date_Type__c</fullName>
        <label>Ust Date Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vantive_Id__c</fullName>
        <label>Vantive Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Brand Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Line_Code__c</columns>
        <columns>Brand_Code__c</columns>
        <columns>Cut__c</columns>
        <columns>Filter__c</columns>
        <columns>Taste__c</columns>
        <columns>Flavor__c</columns>
        <columns>UPC__c</columns>
        <columns>Packaging__c</columns>
        <columns>Pack_Type__c</columns>
        <columns>PaperType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BH{0000}</displayFormat>
        <label>Brand Hierarchy Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>